# haskell_practical_web

./: CHANGELOG.md  LICENSE  practical-web-haskell.cabal  shfile.sh
app/: Main.hs
src/: Lib.hs
src/Adapter/InMemory/: Auth.hs
src/Adapter/PostgreSQL/: Auth.hs
src/Adapter/PostgreSQL/Migrations/: 00000_auths.sql
src/Adapter/RabbitMQ/: Auth.hs  Common.hs
src/Adapter/Redis/: Auth.hs
src/Domain/: Auth.hs  Validation.hs
