cabal-version:      2.4
name:               practical-web-haskell
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Vidy Alfredo
maintainer:         vidy.alfredo@helixleisure.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  
        Adapter.InMemory.Auth,
        Domain.Auth,
        Domain.Validation,
        Lib
    default-extensions:
        OverloadedStrings,
        NoImplicitPrelude,
        QuasiQuotes,
        GeneralizedNewtypeDeriving,
        ConstraintKinds,
        TemplateHaskell,
        FlexibleContexts
    build-depends:    
        base ^>=4.14.3.0,
        classy-prelude,
        time,
        time-lens,
        pcre-heavy,
        aeson,
        mtl,
        string-random,
        data-has,
        katip,
        resource-pool,
        postgresql-simple,
        postgresql-simple-migration,
        amqp,
        hedis,
        exceptions

    hs-source-dirs:   src
    default-language: Haskell2010

executable practical-web-haskell
    main-is:          Main.hs
    default-extensions:
        OverloadedStrings,
        NoImplicitPrelude,
        QuasiQuotes,
        GeneralizedNewtypeDeriving,
        ConstraintKinds,
        FlexibleContexts,
        TemplateHaskell
    -- Modules included in this executable, other than Main.

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        classy-prelude,
        time,
        time-lens,
        pcre-heavy,
        aeson,
        mtl,
        string-random,
        data-has,
        katip,
        resource-pool,
        postgresql-simple,
        postgresql-simple-migration,
        hedis,
        amqp,
        exceptions,
        practical-web-haskell
    hs-source-dirs:   app
    default-language: Haskell2010
